<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Yaresa</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="cbMyPost">My Post</string>
    <string name="AllPosts">All Posts</string>
    <string name="Diagnosis">Diagnosis</string>
    <string name="Nutrition">Nutrition</string>
    <string name="HealthPromotion">Health Promotion</string>
    <string name="viewTopics">view topics</string>
    <string name="title_activity_topics">Topics</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="TopicFilter">Topic Filter</string>
    <string name="posts">posts</string>
    <string name="resources">resources</string>
    <string name="statusOpen">opening list</string>
    <string name="title_activity_opdcase">OPDCaseActivity</string>
    <string name="opdCases">OPD Cases</string>
    <string name="CommunityName">Community Name</string>
    <string name="title_activity_community">Record Module</string>
    <string name="find">find</string>
    <string name="Age">Age</string>
    <string name="year">Years</string>
    <string name="months">Months</string>
    <string name="birthdate">Birthdate</string>
    <string name="title_activity_community_members_record">Community Member Record</string>
    <string name="fullname">Full Name</string>
    <string name="record">Record</string>
    <string name="addCommunityMember">Add Community Member</string>
    <string name="saveCommunityMember">Save Community Member</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="hintLastnameFirstname">Last name first names</string>
    <string name="hintDateformat">dd/mm/yyyy</string>
    <string name="synch">synch data</string>
    <string name="removeRecord">Remove Record</string>
    <string name="remove">remove</string>
    <string name="delete">delete</string>
    <string name="editClient">Edit Community Member</string>
    <string name="cardNo">Card No</string>
    <string name="cardNumber">Card Number</string>
    <string name="title_activity_report">Report</string>
    <string name="title_cm_record_main">basic</string>
    <string name="title_cm_record_other">OPD</string>
    <string name="title_cm_record_note">notes</string>
    <string name="title_report_opdsection">OPD</string>
    <string name="title_cm_record_vaccine">vaccine</string>
    <string name="title_report_vaccine">vaccination</string>
    <string name="title_report_next">next</string>
    <string name="report">Go to report</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="knowledge">Go to knowledge</string>
    <string name="atknowledge">Knowledge</string>
    <string name="upload">upload</string>
    <string name="statusSelectYourName">Select your name and click open button</string>
    <string name="statusUploadingData">up loading data</string>
    <string name="hintEnterNameAndClickFind">enter name and click find</string>
    <string name="synch_url">Synch URL</string>
    <string name="deviceId">Device ID</string>
    <string name="title_activity_synch">Synch</string>
    <string name="updateCommunityData">Update Community Data</string>
    <string name="updateOpdCases">Update OPD Cases</string>
    <string name="clickAbuttonUpdate">click a button to update</string>
    <string name="cancel">Cancel</string>
    <string name="blankSpace">" "</string>
    <string name="title_activity_community_member_record">Community Member Record</string>
    <string name="hintNumber">00</string>
    <string name="nhisIDNumber">NHIS ID NO</string>
    <string name="nhisExpiryDate">Expiry Date</string>
    <string name="save">Save</string>
    <string name="backup">Backup Data</string>
    <string name="restore">Restore Data</string>
    <string name="server">Server</string>
    <string name="local">Local</string>
    <string name="selectAtask">select a task</string>
    <string name="getAllinCommunity">Get All in Community</string>
    <string name="next">next</string>
    <string name="lab">Lab</string>
    <string name="updateVaccineData">Update Vaccine Data</string>
    <string name="vaccine_view_schedule">schedule</string>
    <string name="vaccine_view_record">record</string>
    <string name="add_community">Add Community</string>
    <string name="title_add_community">Add Community</string>
    <string name="add_health_promotion">Add Health Promotion</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="set_location">Set Location</string>
    <string name="add_population">Population</string>
    <string name="add_household">Household</string>
    <string name="add_community_name">Community Name</string>
    <string name="add_subdistrict">Subdistrict Name</string>
    <string name="venue">Venue</string>
    <string name="remarks">Remarks</string>
    <string name="topic">Topic</string>
    <string name="method">Method</string>
    <string name="target_audience">Target Audience</string>
    <string name="number_of_audience">Audience Number</string>
    <string name="month">Month:</string>
    <string name="image">Image Upload</string>
    <string name="date">Date</string>
    <string name="prev">previous</string>
    <string name="ok">OK</string>
    <string name="title_activity_knowledge">mHealth Knowledge</string>
    <string name="questionTag">"What is your question?"</string>
    <string name="postQ">Post Question</string>
    <string name="sortLabel">"Sort by: "</string>
    <string name="SortBy">Sort By:</string>
    <string name="recentPosts">Recent Posts</string>
    <string name="viewPost">View Question</string>
    <string name="recentpost">All Posts</string>
    <string name="myPost">My Post</string>
    <string name="answered">Show: </string>
    <string name="userName">Username</string>
    <string name="question">Question</string>
    <string name="knowledgeSettings">Settings</string>
    <string name="enable_p2p_button">P2P On/Off</string>
    <string name="discover_peers_button">Discover</string>
    <string name="connect_peer_button">Connect</string>
    <string name="disconnect_peer_button">Disconnect</string>
    <string name="get_file_button">Launch Gallery</string>
    <string name="empty"></string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="client_text">This device will act as a client. Click on Gallery button to pick a local(stored) file</string>
    <string name="empty_message">No devices found. Turn on P2P and perform discovery from the Menu in the top (Action Bar)</string>
    <string name="p2p_off_warning">Enable P2P from action bar button above or system settings</string>
    <string name="group_owner_text">"Am I the Group Owner? "</string>
    <string name="label_me">ME</string>
    <string name="label_peers">PEERS</string>
    <string name="device_synch">Device Synch</string>
    <string name="other_owner_text">Am I the other Device? </string>
    <string name="knowledgeBtn">Knowledge</string>
    <string name="resourceMaterial">Resource Material</string>
    <string name="categories">Category</string>
    <string name="resourceType">Resource Type</string>
    <string name="bluetoohSynch">Bluetooth Synch</string>
    <string name="confirmUseAge">Birth date record is important for immunization. Age has to be used if birth date is absolutely unknown. Do you want to continue using age?</string>
    <string name="dialog_confirm_delete">Do you want to delete this question?</string>
    <string name="qstatustxt">Idle&#8230;</string>
    <string name="searchhint">Search Questions</string>
    <string name="quantity">Quantity</string>
    <string name="qty">Qty</string>
    <string name="title_activity_detail_report">Detail</string>
    <string name="detailreport">Detail Report</string>
    <string name="label_synchronizeData">Upload Data</string>
    <string name="app_path">Application Folder</string>
    <string name="picture">Picture</string>
    <string name="snap">Snap</string>
    <string name="select">Select</string>
    <string name="title_activity_health_promotion_list">Health Promotions</string>
    <string name="modeNoCases">No Cases</string>
    <string name="modeNoCommuintyMembers">People</string>
    <string name="mode">Mode</string>
    <string name="fpNewAcceptor">New Acceptor: accepted for the first time</string>
    <string name="fpContinuing">Continuing: stopped, but now continuing</string>
    <string name="fpRevisit">Revisit: revisiting for refill</string>
    <string name="fpVisit">Visit: is visiting to enquire but not accepted</string>
    <string name="newClient">New Client</string>
    <string name="oldClient">Old Client</string>
    <string name="startTask">Start Task</string>
    <string name="status">status</string>
    <string name="opdLateEntryAlert">You are recording this OPD case after 7 days. It is much better to record cases daily</string>
    <string name="title_activity_tasks">Tasks</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="dateOfService">Date of Service Provision</string>
    <string name="typeOfService">Type of Services</string>
    <string name="typeOfOutcomes">Outcomes</string>
    <string name="typeOfAttendance">Type of Attendance</string>
    <string name="procedure">Procedure</string>
    <string name="diagnosis">Diagnosis</string>
    <string name="investigation">Investigation</string>
    <string name="medicines">Medicines</string>
    <string name="add_claim">Add Claim</string>
    <string name="add_medicine">Add</string>
    <string name="add_investigation">Add</string>
    <string name="add_diagnosis">Add</string>
    <string name="add_procedure">Add</string>
</resources>
