<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Synch" >

    <TextView
        android:id="@+id/textSynchStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selectAtask"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ProgressBar
        android:id="@+id/progressBarSynchCommunity"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radioSynchBackupToServer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/server" />

        <RadioButton
            android:id="@+id/radioSynchLocalBackup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/local" />
    </RadioGroup>
	
    <Spinner
        android:id="@+id/spinnerTasks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <Button
        android:id="@+id/buttonStartTask"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startTask" />

    
    <Button
            android:id="@+id/buttonSynchBackup"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backup" />


    <Button
        android:id="@+id/buttonSynchRestore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restore" />

    <Button
        android:id="@+id/buttonSynchCancel"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel" />
    
    <Button
        android:id="@+id/buttonSynchronizeData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_synchronizeData" />

</LinearLayout>