<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->

    <!--
         NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it.
    -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference android:key="synch_url" android:title="@string/synch_url" android:defaultValue="http://cs2.ashesi.edu.gh/~www_developer/yaresa/"/>
    <EditTextPreference android:title="@string/deviceId" android:key="device_id" android:defaultValue="1"/>
    <EditTextPreference android:key="app_path" android:title="@string/app_path" android:defaultValue="/yaresa/"/>

</PreferenceScreen>
