<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txtAgeLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Age" />

    <EditText
        android:id="@+id/editCommunityMemberSearchName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/radioYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/year" />

        <RadioButton
            android:id="@+id/radioMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/months" />
    </RadioGroup>

    <TextView
        android:id="@+id/textCardNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/birthdate" />

    <EditText
        android:id="@+id/editBirthdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date" />

</LinearLayout>
