<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textCommunityStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/blankSpace" />

    <ProgressBar
        android:id="@+id/progressBarCommunity"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
	 <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
	    <Spinner
	        android:id="@+id/spinnerCommunities"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:layout_weight="0.60" />

	    <Spinner
	        android:id="@+id/spinnerSort"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:layout_weight="0.20" />

	    <Button
	        android:id="@+id/buttonCommunityAddMember"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/addCommunityMember" />
	    
	</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/editCommunityMemberSearchName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.36"
            android:hint="@string/hintEnterNameAndClickFind" >

            <requestFocus />
        </EditText>

        <Spinner
            android:id="@+id/spinnerSearchType"
            android:layout_width="229dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/buttonCommunityFind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EEEEEE"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/buttonCommunityPrev"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.01"
            android:text="@string/prev" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.07" />

        <Button
            android:id="@+id/buttonCommunityNext"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            
            android:text="@string/next" />
    </LinearLayout>

    <ListView
        android:id="@+id/listCommunityMembers"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@android:layout/simple_list_item_1"
        >

    </ListView>
	
</LinearLayout>